--- a/FlappyBird/Base.lproj/Main.storyboard
+++ b/FlappyBird/Base.lproj/Main.storyboard
@@ -26,24 +26,67 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oG6-Rs-6Ht">
                                 <rect key="frame" x="200" y="240" width="200" height="120"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bMl-Dz-Zbt">
-                                        <rect key="frame" x="132" y="37" width="42" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                        <nil key="highlightedColor"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="TabScores" translatesAutoresizingMaskIntoConstraints="NO" id="jDV-8i-JuJ">
+                                        <rect key="frame" x="0.0" y="-1" width="200" height="122"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="122" id="l56-gC-HIq"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1999" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N22-cf-oDN">
+                                        <rect key="frame" x="64" y="75" width="117" height="27"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="27" id="MIP-cO-SKL"/>
+                                            <constraint firstAttribute="width" constant="117" id="cZm-aA-NOd"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Heavy" family="Avenir Next" pointSize="30"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="shadowColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <size key="shadowOffset" width="1" height="0.0"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="999" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bMl-Dz-Zbt">
+                                        <rect key="frame" x="64" y="29" width="117" height="27"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="117" id="J2h-ly-QNV"/>
+                                            <constraint firstAttribute="height" constant="27" id="MqT-0O-X0k"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Heavy" family="Avenir Next" pointSize="30"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="shadowColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <size key="shadowOffset" width="1" height="0.0"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="calibratedRGB"/>
                                 <constraints>
+                                    <constraint firstItem="N22-cf-oDN" firstAttribute="trailing" secondItem="jDV-8i-JuJ" secondAttribute="trailing" constant="-19" id="8LZ-Yz-Ydx"/>
+                                    <constraint firstItem="bMl-Dz-Zbt" firstAttribute="trailing" secondItem="jDV-8i-JuJ" secondAttribute="trailing" constant="-19" id="8x7-Ey-6wX"/>
+                                    <constraint firstItem="N22-cf-oDN" firstAttribute="top" secondItem="jDV-8i-JuJ" secondAttribute="top" constant="76" id="ALD-LO-BDm"/>
+                                    <constraint firstAttribute="trailing" secondItem="bMl-Dz-Zbt" secondAttribute="trailing" constant="19" id="HLU-Mz-5DX"/>
+                                    <constraint firstItem="jDV-8i-JuJ" firstAttribute="top" secondItem="bMl-Dz-Zbt" secondAttribute="bottom" constant="-57" id="M62-Rr-wIg"/>
+                                    <constraint firstItem="bMl-Dz-Zbt" firstAttribute="top" secondItem="oG6-Rs-6Ht" secondAttribute="top" constant="29" id="QWI-HO-UfQ"/>
                                     <constraint firstAttribute="width" constant="200" id="k1F-5O-bcv"/>
+                                    <constraint firstItem="bMl-Dz-Zbt" firstAttribute="top" secondItem="jDV-8i-JuJ" secondAttribute="top" id="unL-6B-PpM"/>
+                                    <constraint firstItem="N22-cf-oDN" firstAttribute="bottom" secondItem="jDV-8i-JuJ" secondAttribute="bottom" constant="-19" id="yr6-LP-GLh"/>
                                     <constraint firstAttribute="height" constant="120" id="zu0-F5-Few"/>
                                 </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="8x7-Ey-6wX"/>
+                                        <exclude reference="QWI-HO-UfQ"/>
+                                        <exclude reference="unL-6B-PpM"/>
+                                        <exclude reference="ALD-LO-BDm"/>
+                                    </mask>
+                                </variation>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oWe-kH-1Qb">
                                 <rect key="frame" x="349" y="368" width="40" height="30"/>
                                 <state key="normal" title="Score">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="uq5-mU-hZv" kind="show" id="bUt-p2-W7k"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cMK-PN-jSa">
                                 <rect key="frame" x="200" y="368" width="39" height="30"/>
@@ -51,6 +94,9 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gameover" translatesAutoresizingMaskIntoConstraints="NO" id="80l-Tb-bKP">
+                                <rect key="frame" x="150" y="107" width="300" height="125"/>
+                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qs0-QV-HZs">
                                 <rect key="frame" x="538" y="28" width="22" height="22"/>
                                 <state key="normal">
@@ -64,11 +110,15 @@
                             <constraint firstItem="Itt-kc-g7J" firstAttribute="top" secondItem="PCf-gQ-wO7" secondAttribute="bottom" id="ANX-d6-cUt"/>
                             <constraint firstAttribute="centerX" secondItem="oG6-Rs-6Ht" secondAttribute="centerX" id="BjP-w5-ZdC"/>
                             <constraint firstAttribute="centerY" secondItem="oG6-Rs-6Ht" secondAttribute="centerY" id="Ikc-kN-cH9"/>
+                            <constraint firstItem="jDV-8i-JuJ" firstAttribute="centerX" secondItem="80l-Tb-bKP" secondAttribute="centerX" id="MOH-tf-pBv"/>
                             <constraint firstItem="Itt-kc-g7J" firstAttribute="trailing" secondItem="bdc-N1-crn" secondAttribute="trailingMargin" id="Ogt-W2-7g5"/>
                             <constraint firstItem="oWe-kH-1Qb" firstAttribute="top" secondItem="oG6-Rs-6Ht" secondAttribute="bottom" constant="8" id="Tgd-Pg-yVw"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Itt-kc-g7J" secondAttribute="trailing" id="V5g-Cd-US3"/>
+                            <constraint firstItem="80l-Tb-bKP" firstAttribute="top" secondItem="PCf-gQ-wO7" secondAttribute="bottom" constant="87" id="XJW-VV-Dkv"/>
+                            <constraint firstItem="jDV-8i-JuJ" firstAttribute="top" secondItem="80l-Tb-bKP" secondAttribute="bottom" constant="7" id="dfq-0n-mCj"/>
                             <constraint firstItem="oG6-Rs-6Ht" firstAttribute="trailing" secondItem="oWe-kH-1Qb" secondAttribute="trailing" constant="11" id="lYP-LL-0a5"/>
                             <constraint firstItem="Itt-kc-g7J" firstAttribute="top" secondItem="PCf-gQ-wO7" secondAttribute="bottom" id="lu7-7e-8dD"/>
+                            <constraint firstAttribute="centerX" secondItem="80l-Tb-bKP" secondAttribute="centerX" id="nyV-ik-JY2"/>
                             <constraint firstItem="Itt-kc-g7J" firstAttribute="top" secondItem="PCf-gQ-wO7" secondAttribute="bottom" id="o3g-2D-a4g"/>
                             <constraint firstItem="Itt-kc-g7J" firstAttribute="trailing" secondItem="bdc-N1-crn" secondAttribute="trailingMargin" id="sOA-EF-b13"/>
                             <constraint firstItem="cMK-PN-jSa" firstAttribute="leading" secondItem="oG6-Rs-6Ht" secondAttribute="leading" id="zhQ-xn-SqT"/>
@@ -89,10 +139,10 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="btX-cZ-eVz" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
-        <!--Scores Table View Controller-->
+        <!--Scores View Controller-->
         <scene sceneID="dFA-UQ-qDi">
             <objects>
-                <viewController id="uq5-mU-hZv" customClass="ScoresTableViewController" sceneMemberID="viewController">
+                <viewController id="uq5-mU-hZv" customClass="ScoresViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="OOM-XA-qZE"/>
                         <viewControllerLayoutGuide type="bottom" id="nFL-Bt-TCA"/>
@@ -105,7 +155,11 @@
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <items>
                                     <navigationItem title="Score" id="JrQ-8b-V7S">
-                                        <barButtonItem key="leftBarButtonItem" systemItem="reply" id="w8r-w1-t4R"/>
+                                        <barButtonItem key="leftBarButtonItem" systemItem="reply" id="w8r-w1-t4R">
+                                            <connections>
+                                                <action selector="backButton:" destination="uq5-mU-hZv" id="BwM-vZ-wNY"/>
+                                            </connections>
+                                        </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
@@ -144,10 +198,17 @@
                             <constraint firstItem="y1m-Mr-yt1" firstAttribute="top" secondItem="OOM-XA-qZE" secondAttribute="bottom" id="oeK-1Y-cF4"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="EMg-Rv-1UZ" id="Tnz-Ok-W4v"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aeA-vV-Afj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="459" y="1065"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="TabScores" width="200" height="120"/>
+        <image name="gameover" width="300" height="125"/>
+    </resources>
 </document>
