--- a/FlappyBird/Base.lproj/Main.storyboard
+++ b/FlappyBird/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="LVB-YS-i5n">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="LVB-YS-i5n">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -22,6 +22,9 @@
                                 <state key="normal" title="Pause">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="buttonPause:" destination="LVB-YS-i5n" eventType="touchUpInside" id="iq5-ul-xfJ"/>
+                                </connections>
                             </button>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oG6-Rs-6Ht">
                                 <rect key="frame" x="200" y="240" width="200" height="120"/>
@@ -85,6 +88,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
+                                    <action selector="buttonScore:" destination="LVB-YS-i5n" eventType="touchUpInside" id="83V-PK-EIf"/>
                                     <segue destination="uq5-mU-hZv" kind="presentation" modalTransitionStyle="flipHorizontal" id="bUt-p2-W7k"/>
                                 </connections>
                             </button>
@@ -93,6 +97,9 @@
                                 <state key="normal" title="Jouer">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="buttonPlay:" destination="LVB-YS-i5n" eventType="touchUpInside" id="dqc-na-0eJ"/>
+                                </connections>
                             </button>
                             <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gameover" translatesAutoresizingMaskIntoConstraints="NO" id="80l-Tb-bKP">
                                 <rect key="frame" x="150" y="107" width="300" height="125"/>
@@ -135,6 +142,12 @@
                             </mask>
                         </variation>
                     </view>
+                    <connections>
+                        <outlet property="currentScore" destination="bMl-Dz-Zbt" id="zag-Xn-EWQ"/>
+                        <outlet property="highscoreLabel" destination="N22-cf-oDN" id="zkS-3A-TcW"/>
+                        <outlet property="imageGameOver" destination="80l-Tb-bKP" id="wCu-N6-f1q"/>
+                        <outlet property="viewScore" destination="oG6-Rs-6Ht" id="2NC-S1-QZf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="btX-cZ-eVz" sceneMemberID="firstResponder"/>
             </objects>
